[NAE-1645] - Set data actions refactor
- fix tests